# pydoctrace

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  commitlint.config.js  pyproject.toml
.github/workflows/: python-package.yml
pydoctrace/: doctrace.py  tracer.py
pydoctrace/callfilter/: __init__.py  presets.py
pydoctrace/domain/: context.py  diagram.py  execution.py  sequence.py
pydoctrace/exporters/: __init__.py  formatters.py  plantuml.py
pydoctrace/exporters/plantuml/: __init__.py  component.py  components.py  sequence.py
pydoctrace/tracer/: __init__.py  framescrapper.py  framescrapperpre311.py
pydoctrace/tracer/framescrapper/: __init__.py  post311.py  pre311.py
tests/: __init__.py  mockedinstance.py
tests/doctrace/: test_doctrace.py  test_ecoindex.py  test_poc.py
tests/integrations/: __init__.py
tests/integrations/calldepth/: __init__.py  test_depth_1-component-above_depth_3_preset.puml  test_depth_1-component-above_depth_4_preset.puml  test_depth_1-component-above_depth_5_preset.puml
tests/integrations/classes/: __init__.py  basicclass.py  complexclasses.py  dataclass.py  namedtuple.py  namedtuple_disambiguation.py  test_classes.py  test_main_basic_class-is_suzie_q-component.puml  test_main_dataclass-are_dataclasses-component.puml  test_main_local_defs-is_suzie_q-component.puml  test_main_namedtuple-is_suzie_q-component.puml  test_main_namedtuple_disambiguation-are_namedtuples-component.puml  test_main_process_with_factory-is_minus_2-component.puml  test_main_start_game-has_matrix-component.puml
tests/integrations/ecoindex/: test_ecoindex.py  test_tests.modules.ecoindex.ecoindex-component.puml  test_tests.modules.ecoindex.ecoindex-sequence.puml
tests/integrations/factorial/: test_factorial.py  test_factorial_recursive-6-720-component.puml  test_factorial_recursive-6-720-sequence.puml  test_factorial_reduce_lambda-6-720-component.puml  test_factorial_reduce_lambda-6-720-sequence.puml  test_factorial_reduce_multiply-6-720-component.puml  test_factorial_reduce_multiply-6-720-sequence.puml  test_handled_error-factorial_recursive_check_handled-invalid_int-0-component.puml  test_handled_error-factorial_recursive_check_handled-invalid_int-0-sequence.puml  test_handled_error-factorial_recursive_check_unhandled-None-ValueError-component.puml  test_handled_error-factorial_recursive_check_unhandled-None-ValueError-sequence.puml  test_handled_error-factorial_with_checker-int_is_resting-None-component.puml  test_handled_error-factorial_with_checker-int_is_resting-None-sequence.puml
tests/integrations/fibonacci/: test_fibonacci-4-3-component.puml  test_fibonacci-4-3-sequence.puml  test_fibonacci.py
tests/integrations/withclass/: test_class_call.py
tests/modules/: ecoindex.py
tests/modules/classes/: collector.py  complexclasses.py  dataclass.py  local_defs.py  namedtuples.py
tests/modules/factorial/: __init__.py  validator.py
tests/modules/fibonacci/: __init__.py
tests/modules/withclass/: __init__.py
tests/pydoctrace/: test_doctrace.py  test_export_file_path_templating.py
tests/pydoctrace/callfilter/: test_callfilter.py  test_presets.py
tests/pydoctrace/exporters/: test_formatters.py
tests/pydoctrace/exporters/plantuml/: test_component.py  test_sequence.py
tests/pydoctrace/tracer/: test_framescrapper.py  test_tracer.py
tests/pydoctrace/tracer/framescrapper/: test_pre311.py
